[project]
name = "pylibsnmp"
description = "Library for working with network devices via snmp"
version = "0.3.2"
authors = [
    { name = "Abdul Zagirov", email = "zagirovaa@netcon.pro" }
]
dependencies = [
    "easysnmp"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]